# astro-pi

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  LAYER_ARCHITECTURE.md  Makefile  NEXT_STEPS.md  NukeX-pxm.xsgn  PROJECT.md  README.md  nukex-engineering-personas.md  nukex-subagent-personas.md  package-lock.json  package.json  pyproject.toml  release.sh
BayesianAstro/cpp/: CMakeLists.txt
BayesianAstro/cpp/include/: BayesianAstroInterface.h
BayesianAstro/cpp/src/: BayesianAstroInstance.cpp  BayesianAstroInterface.cpp  BayesianAstroProcess.cpp
archive/nukex-v1/: CLAUDE.md  HANDOFF.md  IMPLEMENTATION-PLAN.md  Makefile  README.md
archive/nukex2/: Makefile  NukeX-Specification.md  NukeX-pxm.xsgn  test_prestretch.js
archive/pi-scripts/: HazeKill.js
commands/: pjsr-analyze.md  pjsr-class.md  pjsr-help.md
docs/: LAYER_ARCHITECTURE.md  fix-rgb-handling-logging.md  selection_strategy_audit.md  stretch_parameters.md
docs/plans/: 2026-02-19-ml-pixel-selector-design.md  2026-03-08-rgb-autostretch-implementation.md
gaia-depth-grade/: .gitignore  README.md  pyproject.toml
gaia-depth-grade/docs/superpowers/plans/: 2026-06-23-gaia-depth-grade-phase1.md
gaia-depth-grade/docs/superpowers/specs/: 2026-06-23-gaia-depth-grade-design.md  2026-06-24-sidecar-distribution-design.md
gaia-depth-grade/pi/: GaiaDepthGradeDialog.js  GaiaDepthGradeDialog.xsgn  gaia_depth_grade.js  gaia_depth_grade.xsgn  gaia_depth_grade_lib.jsh  gaia_depth_grade_lib.xsgn
gaia-depth-grade/src/gaia_depth_grade/: cli.py  config.py  detect.py  display.py  distances.py  local_gaia.py  modulate.py  nebula.py  render.py  transform.py  wcs.py
gaia-depth-grade/tests/: test_cache.py  test_cli_subcommands.py  test_display.py  test_distances.py  test_e2e_synthetic.py  test_local_gaia.py  test_modulate.py  test_nebula.py  test_pipeline.py  test_render.py  test_transform.py  test_version.py
gaia-depth-grade/tools/: SignGaiaScriptsNative.js  _smoke_fixture.py  build-sidecar.sh  gaia-depth-grade-sidecar.spec  sidecar_entry.py
modules/nukex/: CMakeLists.txt
modules/nukex/src/lib/calibration/: CMakeLists.txt
modules/nukex/src/lib/calibration/include/nukex/calibration/: qe_database.hpp
modules/nukex/src/lib/calibration/src/: channel_decomposer.cpp
pcl-module/: sign_module.js
pcl-module/AstroStretchStudio/: AstroStretchStudioInstance.cpp  AstroStretchStudioInstance.h  AstroStretchStudioInterface.cpp  AstroStretchStudioParameters.cpp  AstroStretchStudioParameters.h  AstroStretchStudioProcess.cpp  AstroStretchStudioProcess.h  AstroStretchStudioZoneHDR.h
personas/: astro-scout.md  cpp-senior.md  py-engineer.md
pi-copilot/: README.md
pi-copilot/docs/: 2026-06-13-pi-copilot-design.md
pi-copilot/pi/: PICopilot.js  dump-process-catalog.js  process-summaries.json
pi-copilot/sidecar/: package-lock.json  package.json
pjsr/: GaiaDepthGradeDialog.js  gaia_depth_grade.js  gaia_depth_grade_lib.jsh
repository/: updates.xri
research/notes/: qe_curves_extracted.md
schemas/: pjsr-core.json  pjsr-extended.json
scripts/: release.sh
scripts/ez-stretch/: .mcp.json  README.md
skills/: pjsr.md
src/: NukeXInstance.cpp  NukeXInterface.d  NukeXInterface.h  NukeXModule.cpp  NukeXParameters.cpp  NukeXParameters.h  NukeXProcess.d  NukeXProcess.h  NukeXStackInstance.cpp  NukeXStackInstance.d  NukeXStackInstance.h  NukeXStackInterface.cpp  NukeXStackInterface.d  NukeXStackInterface.h  NukeXStackParameters.cpp  NukeXStackParameters.h  NukeXStackProcess.cpp  NukeXStackProcess.d  pjsr-parser.js  server.js  test.js
src/engine/: BayerDemosaic.h  BlendEngine.cpp  BlendEngine.h  Compositor.cpp  Compositor.d  Compositor.h  DistributionFitter.cpp  DistributionFitter.d  DistributionFitter.h  FrameRegistration.cpp  FrameRegistration.h  FrameStreamer.cpp  FrameStreamer.h  HistogramEngine.cpp  IStretchAlgorithm.cpp  IStretchAlgorithm.d  LRGBProcessor.cpp  LayerStack.cpp  ONNXInference.cpp  ONNXInference.h  PSFModel.cpp  PSFModel.h  PixelSelector.cpp  PixelSelector.h  PixelStackAnalyzer.cpp  PixelStackAnalyzer.d  PixelStackAnalyzer.h  RegionAnalyzer.cpp  RegionAnalyzer.d  RegionAnalyzer.h  RegionStatistics.cpp  RegionStatistics.d  RegionStatistics.h  Segmentation.cpp  Segmentation.d  Segmentation.h  SegmentationModel.cpp  SegmentationModel.h  SegmentationPalette.h  SelectionRules.cpp  (+11 more)
src/gaia_depth_grade/: cache.py  cli.py  config.py  detect.py  distances.py  match.py  pipeline.py  transform.py  wcs.py
src/lib/calibration/: CMakeLists.txt
src/lib/calibration/include/nukex/calibration/: channel_decomposer.hpp  qe_database.hpp
src/lib/calibration/src/: qe_database.cpp
src/lib/compose/: CMakeLists.txt
src/lib/compose/include/nukex/compose/: color_composer.hpp
src/lib/compose/src/: color_composer.cpp  palette.cpp
src/module/: NukeXInstance.cpp  NukeXInstance.h  NukeXInterface.cpp  NukeXInterface.h
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  test_phase_a_router.cpp  test_phase_b_qsolve.cpp
tests/: .gitignore  conftest.py  test_cli_subcommands.py  test_config.py  test_detect.py  test_distances.py  test_e2e_synthetic.py  test_match.py  test_render.py  test_transform.py  test_wcs.py
tests/unit/: test_histogram.cpp  test_stretch_algorithms.cpp
tools/: CLICodeSign.js  SignScriptsNative.js  build-packages.sh  sign.sh
tools/pcl_parser/: .mcp.json  README.md  package-lock.json  package.json
tools/pjsr_parser/: .gitignore
training_data/scripts/: PREPROCESSING_PARITY_REPORT.md  autolabel_rgb.py  calculate_class_weights.py  check_distribution.py  compose_segments.py  create_unified_manifest.py  demo_intelligent_stretch.py  download_all.py  download_eso.py  download_eso_simple.py  download_hst.py  download_star_clusters.py  execute_5point_plan.py  export_onnx_7class.py  generate_more_artifacts.py  generate_weak_classes.py  mask_postprocess.py  merge_manifests.py  monitor.py  pixel_stack_analyzer.py  relabel_new_data.py  relabel_planetary_nebulae.py  relabel_stars.py  segmentation_palette.py  synthetic_color.py  test_connections.py  test_model.py  test_model_fits.py  test_model_real.py  (+7 more)
(+321 files in other folders)
