[project]
name = "gaia-depth-grade"
version = "0.1.0"
description = "Physically-grounded depth grade for astrophotographs using Gaia distances"
requires-python = ">=3.13"
dependencies = ["numpy>=2", "scipy", "astropy>=7", "photutils", "astroquery", "pillow"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
